added id to html for targeting with js, targeted the element in app.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Salmon Cookies</title>
   </head>
   <body>
+    <header>
+
+    </header>
+    <nav>
+
+    </nav>
+    <div id="storeInfo"></div>
 
   </body>
   <script src="app.js" charset="utf-8" type="text/javascript"></script>
