added a new function and array for the hour labels, made an h2 and ul in the storeinfo dive I will populate

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <nav>
 
     </nav>
-    <div id="storeInfo"></div>
+    <div id="storeInfo">
+      <h2 id="storeName"></h2>
+      <ul id="cookieSales">
+
+      </ul>
+    </div>
 
   </body>
   <script src="app.js" charset="utf-8" type="text/javascript"></script>
