Made loops to call the functions and to populate the html

--- a/index.html
+++ b/index.html
@@ -6,18 +6,15 @@
   </head>
   <body>
     <header>
-
+      <h1>Salmon Cookies</h1>
+      <h2>They'll catch your taste buds hook, line, sinker.</h2>
     </header>
     <nav>
 
     </nav>
-    <div id="storeInfo">
-      <h2 id="storeName"></h2>
-      <ul id="cookieSales">
-
-      </ul>
+    <div id="storeDiv">
+      <h2>Estimated Hourly Cookie Sales by Location</h2>
     </div>
-
   </body>
   <script src="app.js" charset="utf-8" type="text/javascript"></script>
 </html>
