starting to style, testing fonts and placement in the header

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Salmon Cookies</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cantarell:400i|Josefin+Sans|Oxygen" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <h1>Salmon Cookies</h1>
+    <header class="topBar">
+      <img src="salmon.png" alt="">
+      <h1>salmon cookies</h1>
       <h2>They'll catch your taste buds hook, line, sinker.</h2>
     </header>
     <nav>
