added a new html page to hold the sales info, styled both html pages with background colors and borders, added soe basic store info to main page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,33 @@
       <img src="salmon.png" alt="">
       <h1>salmon cookies</h1>
       <h2>They'll catch your taste buds hook, line, sinker.</h2>
+      <h3>Contact Us: 555-555-5555 Email: <a href="#">info@salmoncookies.com</a></h3>
     </header>
-    <nav>
-
-    </nav>
-    <div id="storeDiv">
-      <h2>Estimated Hourly Cookie Sales by Location</h2>
+    <div class="aboutstores">
+      <h2 id="locations">Locations</h2>
+      <div class="store">
+        <h2>1st and Pike</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>SeaTac Airport</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>Seattle Center</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>Capitol Hill</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>Alki</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
     </div>
+    <nav>
+      <a href="sales.html" title="sales page">Sales</a>
+    </nav>
   </body>
-  <script src="app.js" charset="utf-8" type="text/javascript"></script>
 </html>
