--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Salmon Cookies</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cantarell:400i|Josefin+Sans|Oxygen" rel="stylesheet">
   </head>
   <body>
-
+    <header class="topBar">
+      <img src="salmon.png" alt="">
+      <h1>salmon cookies</h1>
+      <h2>They'll catch your taste buds hook, line, sinker.</h2>
+      <h3>Contact Us: 555-555-5555 Email: <a href="#">info@salmoncookies.com</a></h3>
+    </header>
+    <div class="aboutstores">
+      <h2 id="locations">Locations</h2>
+      <div class="store">
+        <h2>1st and Pike</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>SeaTac Airport</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>Seattle Center</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>Capitol Hill</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+      <div class="store">
+        <h2>Alki</h2>
+        <h3>Hours: 6am to 8pm</h3>
+      </div>
+    </div>
+    <nav>
+      <a href="sales.html" title="sales page">Sales</a>
+    </nav>
   </body>
 </html>
