got the submit button submitting, building the eventlistener

--- a/sales.html
+++ b/sales.html
@@ -12,6 +12,7 @@
       <h1>salmon cookies</h1>
       <h2>They'll catch your taste buds hook, line, sinker.</h2>
       <h3>Contact Us: 555-555-5555 Email: <a href="#">info@salmoncookies.com</a></h3>
+      <a href="index.html">Home</a>
     </header>
     <div id="storeDiv">
       <h2> <img src="fishies.gif" /> Estimated Hourly Cookie Sales by Location <img src="fishies.gif" /> </h2>
