added required images and text to the html doc

--- a/index.html
+++ b/index.html
@@ -11,33 +11,84 @@
       <img src="salmon.png" alt="">
       <h1>salmon cookies</h1>
       <h2>They'll catch your taste buds hook, line, sinker.</h2>
-      <h3>Contact Us: 555-555-5555 Email: <a href="#">info@salmoncookies.com</a></h3>
+      <h3>Contact Us: 666.666.6666 Email: <a href="#">info@salmoncookies.com</a></h3>
     </header>
-    <div class="aboutstores">
+    <nav>
+      <a href="#aboutstores">Locations</a>
+      <a href="#about">About Us</a>
+      <a href="#testimonials">Testimonials</a>
+      <a href="#merch">Merchandise</a>
+    </nav>
+    <div id="aboutstores">
+      <img src="frosted-cookie.jpg" alt="frosted salmon cookie" title="Salmon Cookie" class="cookie1">
       <h2 id="locations">Locations</h2>
       <div class="store">
         <h2>1st and Pike</h2>
         <h3>Hours: 6am to 8pm</h3>
+        <h3>1234 Pike St.</h3>
+        <h3>555.555.5555</h3>
       </div>
       <div class="store">
         <h2>SeaTac Airport</h2>
         <h3>Hours: 6am to 8pm</h3>
+        <h3>Near Gate C</h3>
+        <h3>444.444.4444</h3>
       </div>
       <div class="store">
         <h2>Seattle Center</h2>
         <h3>Hours: 6am to 8pm</h3>
+        <h3>Inside the Armory</h3>
+        <h3>333.333.3333</h3>
       </div>
       <div class="store">
         <h2>Capitol Hill</h2>
         <h3>Hours: 6am to 8pm</h3>
+        <h3>4321 Broadway St.</h3>
+        <h3>222.222.2222</h3>
       </div>
       <div class="store">
         <h2>Alki</h2>
         <h3>Hours: 6am to 8pm</h3>
+        <h3>4132 Alki Ave. SE</h3>
+        <h3>111.111.1111</h3>
       </div>
+      <img src="frosted-cookie.jpg" alt="frosted salmon cookie" title="Salmon Cookie" class="cookie2">
     </div>
-    <nav>
-      <a href="sales.html" title="sales page">Sales</a>
-    </nav>
+    <div id="about">
+      <img src="chinook.jpg" alt="chinook salmon" title="Chinook Salmon">
+      <h2>Our Store-y</h2>
+      <p>Pat Genericlastname, the inventor of salmon cookies, is an avid fly fisherman. One day, while out on the river casting his line, he realized that his breakfast, just wasn't cutting it. He was <em>hungry</em>. Even though he'd eaten only a few hours before, the cookie he'd had with his coffee hadn't done a lot for Pat's hunger. He looked down at the Chinook Salmon he'd just caught and his stomach growed. Now <span>there</span> was something filling. Something he could eat and count on not being hungry for a while. But Pat didn't want to eat fish for breakfast... Pat liked cookies for breakfast, with his coffee. He was staring at that fish, and thinking about his breakfast cookies, and in that moment the idea for Salmon Cookies was born. Pat set about finding a way to include all of the nutritional benefits and hunger fighting protein of salmon, and put it in a cookie...that doesn't even taste like fish! It's perfect for enjoying with a nice cup of coffee, as a protein and vitamin boost, or even just as a nice midafternoon snack! Give Salmon Cookies a shot, and we guarantee <span>they catch your taste buds hook, line, and sinker!</span></p>
+      <img src="cutter.jpeg" alt="salmon cookie cutter" title="Salmon Cookie Cutter">
+    </div>
+    <div id="testimonials">
+      <img src="family.jpg" alt="A family enjoying Salmon Cookies" title="A family enjoying Salmon Cookies">
+      <h3>Sheryl C., nurse</h3>
+      <p class="testimonial">
+        Salmon Cookies are my go-to breakfast if I have to work a long shift at the hospital. They keep my tummy from growling when I'm on my feet for hours at a time!
+      </p>
+      <h3>Alfred Fisheater, lawyer</h3>
+      <p class="testimonial">
+        I offer Salmon Cookies to all of my clients before we go into court. The protein is great for taking their minds off their stomachs, and letting them focus.
+      </p>
+      <h3>King Salmon, pro fisherman</h3>
+      <p class="testimonial">
+        Salmon Cookies are always a hit at the fishing derbies! All the guys love them, and they're great with coffee!
+      </p>
+      <h3>Samantha Coho, teacher</h3>
+      <p class="testimonial">
+        I feed my class of kindergartners Salmon Cookies every snacktime. The kids have no idea the cookies have fish in them, and the cookies keep them healthy and happy!
+      </p>
+    </div>
+    <div id="merch">
+      <h2>Merchandise</h2>
+      <h3>Available for purchse at select store locations.</h3>
+      <img src="fish.jpg" alt="salmon plush toys" title="Salmon Plushies!">
+      <img src="lovesalmonmug.jpg" alt="I love salmon mug" title="I <3 Salmon Mug!">
+      <img src="salmonmug.jpg" alt="salmon mug" title="Salmon Mug!">
+      <img src="travelmug.jpg" alt="salmon travel mug" title="Salmon Travel Mug!">
+      <img src="shirt.jpg" alt="salmon shirt" title="Salmon Shirts!">
+      <img src="salmonsnowsock_olive.768w.jpg" alt="salmon socks" title="Salmon Socks!">
+    </div>
+    <a href="sales.html" title="sales page">For Internal Use</a>
   </body>
 </html>
