finishes styling the CSS, by adding borders and centering front page emelents, resizing pictures, and styling the nav bar

--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
     <div id="about">
       <img src="chinook.jpg" alt="chinook salmon" title="Chinook Salmon">
       <h2>Our Store-y</h2>
-      <p>Pat Genericlastname, the inventor of salmon cookies, is an avid fly fisherman. One day, while out on the river casting his line, he realized that his breakfast, just wasn't cutting it. He was <em>hungry</em>. Even though he'd eaten only a few hours before, the cookie he'd had with his coffee hadn't done a lot for Pat's hunger. He looked down at the Chinook Salmon he'd just caught and his stomach growed. Now <span>there</span> was something filling. Something he could eat and count on not being hungry for a while. But Pat didn't want to eat fish for breakfast... Pat liked cookies for breakfast, with his coffee. He was staring at that fish, and thinking about his breakfast cookies, and in that moment the idea for Salmon Cookies was born. Pat set about finding a way to include all of the nutritional benefits and hunger fighting protein of salmon, and put it in a cookie...that doesn't even taste like fish! It's perfect for enjoying with a nice cup of coffee, as a protein and vitamin boost, or even just as a nice midafternoon snack! Give Salmon Cookies a shot, and we guarantee <span>they'll catch your taste buds hook, line, and sinker!</span></p>
+      <p>Pat Genericlastname, the inventor of salmon cookies, is an avid fly fisherman. One day, while out on the river casting his line, he realized that his breakfast, just wasn't cutting it. He was <em>hungry</em>. Even though he'd eaten only a few hours before, the cookie he'd had with his coffee hadn't done a lot for Pat's hunger. He looked down at the Chinook Salmon he'd just caught and his stomach growed. Now <span>there</span> was something filling. Something he could eat and count on not being hungry for a while. But Pat didn't want to eat fish for breakfast... Pat liked cookies for breakfast, with his coffee. He was staring at that fish, and thinking about his breakfast cookies, and in that moment the idea for Salmon Cookies was born. <br /> <br> Pat set about finding a way to include all of the nutritional benefits and hunger fighting protein of salmon, and put it in a cookie...that doesn't even taste like fish! It's perfect for enjoying with a nice cup of coffee, as a protein and vitamin boost, or even just as a nice midafternoon snack! Give Salmon Cookies a shot, and we guarantee <span>they'll catch your taste buds hook, line, and sinker!</span></p>
       <img src="cutter.jpeg" alt="salmon cookie cutter" title="Salmon Cookie Cutter">
     </div>
     <div id="testimonials">
       <img src="family.jpg" alt="A family enjoying Salmon Cookies" title="A family enjoying Salmon Cookies">
+      <h2>Testimonials</h2>
       <h3>Sheryl C., nurse</h3>
       <p class="testimonial">
         Salmon Cookies are my go-to breakfast if I have to work a long shift at the hospital. They keep my tummy from growling when I'm on my feet for hours at a time!
@@ -81,13 +82,13 @@
     </div>
     <div id="merch">
       <h2>Merchandise</h2>
-      <h3>Available for purchse at select store locations.</h3>
-      <img src="fish.jpg" alt="salmon plush toys" title="Salmon Plushies!">
-      <img src="lovesalmonmug.jpg" alt="I love salmon mug" title="I <3 Salmon Mug!">
-      <img src="salmonmug.jpg" alt="salmon mug" title="Salmon Mug!">
-      <img src="travelmug.jpg" alt="salmon travel mug" title="Salmon Travel Mug!">
-      <img src="shirt.jpg" alt="salmon shirt" title="Salmon Shirts!">
-      <img src="salmonsnowsock_olive.768w.jpg" alt="salmon socks" title="Salmon Socks!">
+      <h3>Available for purchase at select store locations.</h3>
+      <img class="merch" src="fish.jpg" alt="salmon plush toys" title="Salmon Plushies!">
+      <img class="merch" src="lovesalmonmug.jpg" alt="I love salmon mug" title="I <3 Salmon Mug!">
+      <img class="merch" src="salmonmug.jpg" alt="salmon mug" title="Salmon Mug!">
+      <img class="merch" src="travelmug.jpg" alt="salmon travel mug" title="Salmon Travel Mug!">
+      <img class="merch" src="shirt.jpg" alt="salmon shirt" title="Salmon Shirts!">
+      <img class="merch" src="salmonsnowsock_olive.768w.jpg" alt="salmon socks" title="Salmon Socks!">
     </div>
     <a href="sales.html" title="sales page">For Internal Use</a>
   </body>
